Added assembly plugin

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,4 +4,6 @@ lanit-bus-bot {
   # api token for bot
   telegram.bot.api.token = "257669222:AAEhSlFWkxv651Cy9IXIsLjbNsfWQI_MttE"
 
+  source.excel = "20161010.xlsx"
+
 }
