Added start script and Universal sbt plugin

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,6 +4,7 @@ lanit-bus-bot {
   # api token for bot
   telegram.bot.api.token = "257669222:AAEhSlFWkxv651Cy9IXIsLjbNsfWQI_MttE"
 
+  # do not change
   source.excel = "20161010.xlsx"
 
 }
