#1 Добавить возможность подкладывать новый excel-файл и указывать его в настройках

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,7 +4,8 @@ lanit-bus-bot {
   # api token for bot
   telegram.bot.api.token = "312076054:AAEWBoEfCAEzjWqaOmS7xb51NabxecH2rrM"
 
-  # do not change
+  # Bus schedule (excel)
+  schedule.folder = "../conf/"
   source.excel = "20170428.xlsx"
 
 }
