Change Schedule. Name for keyboard buttons can change from application.conf

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,10 +2,15 @@
 lanit-bus-bot {
 
   # api token for bot
-  telegram.bot.api.token = "312076054:AAEWBoEfCAEzjWqaOmS7xb51NabxecH2rrM"
+  telegram.bot.api.token = "token"
 
   # Bus schedule (excel)
+  # Uncomment for local testing
+  #schedule.folder = "src/main/resources/"
   schedule.folder = "../conf/"
-  source.excel = "20170428.xlsx"
+  source.excel = "20171016.xlsx"
 
+  # bot keyboard
+  button.office = "Офис"
+  button.metro = "Метро"
 }
