--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -7,7 +7,7 @@ lanit-bus-bot {
   # Bus schedule (excel)
   # Uncomment for local testing
   #schedule.folder = "src/main/resources/"
-  schedule.folder = "../conf/"
+  schedule.folder = "conf/"
   source.excel = "20171016.xlsx"
 
   # bot keyboard
